--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "scripts": {
     "start": "npm run download && npm run cloudflare-delete && npm run cloudflare-create",
-    "dry": "npm run download && DRY_RUN=1 npm run cloudflare-create:list",
+    "prettier": "prettier --write '**/*.{js,jsx,css,html}'",
     "download": "node download_lists.js",
-    "download:allowlist": "node download_lists.js allowlist",
-    "download:blocklist": "node download_lists.js blocklist",
     "cloudflare-create": "npm run cloudflare-create:list && npm run cloudflare-create:rule",
     "cloudflare-delete": "npm run cloudflare-delete:rule && npm run cloudflare-delete:list",
     "cloudflare-create:rule": "node cf_gateway_rule_create.js",
@@ -14,8 +12,10 @@
   },
   "type": "module",
   "dependencies": {
+    "convict": "^6.2.4",
     "dotenv": "^16.4.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "winston": "^3.11.0"
   },
   "engines": {
     "node": ">=20"
